--- a/requirements.txt
+++ b/requirements.txt
@@ -3,106 +3,103 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
-aniso8601==9.0.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.8.0
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.4
-attrs==23.1.0
-babel==2.16.0
+anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1736174388474/work
+appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1733332318622/work
+argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1733311059102/work
+argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1725356584769/work
+arrow @ file:///home/conda/feedstock_root/build_artifacts/arrow_1733584251875/work
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+async-lru @ file:///home/conda/feedstock_root/build_artifacts/async-lru_1733584297267/work
+async-timeout==4.0.3
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1734348785146/work
+babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1733236348445/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
 backoff==2.2.1
-beautifulsoup4==4.12.3
-bleach==6.2.0
-cachelib==0.9.0
+beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1733230845337/work
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_bleach_1737382993/work
+Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1725267521616/work
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
 cachetools==5.5.0
-certifi==2022.12.7
-cffi==1.17.1
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1734380492396/work/certifi
+cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1725560567968/work
 chardet==5.2.0
-charset-normalizer==3.0.1
-click==8.1.3
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1735929714516/work
+click==8.1.8
 coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.3.1
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+contourpy==1.3.0
 cryptography==44.0.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==3.2.0
-debugpy==1.8.12
-decorator==5.1.1
-defusedxml==0.7.1
+debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1737269787949/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
 Deprecated==1.2.15
 diffusers==0.32.2
 dill==0.3.8
 distro==1.9.0
-dominate==2.7.0
 effdet==0.4.1
 emoji==2.14.1
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1733327148154/work
 eval_type_backport==0.2.2
-exceptiongroup==1.1.2
-executing==2.1.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
 faiss-cpu==1.9.0.post1
-fastjsonschema==2.21.1
+fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1733235979760/work/dist
 filelock==3.16.1
 filetype==1.2.0
-Flask==2.2.3
-Flask-Bootstrap==3.3.7.1
-Flask-Caching==2.0.2
-Flask-RESTful==0.3.10
 flatbuffers==24.12.23
 fonttools==4.55.3
-fqdn==1.5.1
+fqdn @ file:///home/conda/feedstock_root/build_artifacts/fqdn_1733327382592/work/dist
 frozenlist==1.5.0
 fsspec==2024.9.0
 google-api-core==2.24.0
 google-auth==2.37.0
 google-cloud-vision==3.9.0
 googleapis-common-protos==1.66.0
+greenlet==3.1.1
 groq==0.15.0
 grpcio==1.69.0
 grpcio-status==1.69.0
-gunicorn==21.2.0
-h11==0.14.0
+h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1733327467879/work
+h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1733298745555/work
+hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1733299205993/work
 html5lib==1.1
-httpcore==1.0.7
-httpx==0.28.1
+httpcore @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_httpcore_1731707562/work
+httpx @ file:///home/conda/feedstock_root/build_artifacts/httpx_1733663348460/work
 httpx-sse==0.4.0
 huggingface-hub==0.27.1
 humanfriendly==10.0
-idna==3.4
-importlib_metadata==8.5.0
+hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1733298771451/work
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
+importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1736252299705/work
 iopath==0.1.10
-ipykernel==6.29.5
-ipython==8.31.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.2
-Jinja2==3.1.2
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
+ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1680185563420/work
+isoduration @ file:///home/conda/feedstock_root/build_artifacts/isoduration_1733493628631/work/dist
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1734823942230/work
 joblib==1.4.2
-json5==0.10.0
+json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1733272076743/work
 jsonpatch==1.33
 jsonpath-python==1.0.6
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.11.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-kiwisolver==1.4.8
+jsonpointer @ file:///Users/runner/miniforge3/conda-bld/jsonpointer_1725302885897/work
+jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1733472696581/work
+jsonschema-specifications @ file:///tmp/tmpk0f344m9/src
+jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1734531682843/work
+jupyter-lsp @ file:///home/conda/feedstock_root/build_artifacts/jupyter-lsp-meta_1733492907176/work/jupyter-lsp
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1734702637701/work
+jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1733427956852/work
+jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1734539168769/work
+jupyterlab_pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1733328101776/work
+jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1733599573484/work
+kiwisolver==1.4.7
 langchain==0.3.14
 langchain-community==0.3.14
 langchain-core==0.3.30
@@ -113,136 +110,131 @@ langdetect==1.0.9
 langsmith==0.2.11
 layoutparser==0.3.4
 lxml==5.3.0
-MarkupSafe==2.1.2
+MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1733219755313/work
 marshmallow==3.25.1
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mistune==3.1.0
+matplotlib==3.9.4
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1735686876364/work
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
-mysql-connector==2.2.9
-nbclient==0.10.2
-nbconvert==7.16.5
-nbformat==5.10.4
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1734628800805/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1736258671456/work
+nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1733402752141/work
 ndjson==0.3.1
-nest-asyncio==1.6.0
-networkx==3.4.2
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+networkx==3.2.1
 nltk==3.9.1
-notebook==7.3.2
-notebook_shim==0.2.4
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1734789425270/work
+notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1733408315203/work
 numpy==1.26.4
 olefile==0.47
 omegaconf==2.3.0
 onnx==1.17.0
-onnxruntime==1.20.1
+onnxruntime==1.19.2
 opencv-python==4.11.0.86
 orjson==3.10.15
-outcome==1.2.0
-overrides==7.7.0
-packaging==24.2
-pandas==1.5.3
-pandocfilters==1.5.1
-parso==0.8.4
+overrides @ file:///home/conda/feedstock_root/build_artifacts/overrides_1734587627321/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+pandas==2.2.3
+pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
 pdf2image==1.17.0
 pdfminer.six==20231228
 pdfplumber==0.11.5
-pexpect==4.9.0
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
 pi_heif==0.21.0
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
 pikepdf==9.5.1
 pillow==11.1.0
-platformdirs==4.3.6
-plotly==5.15.0
+pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1733344503739/work
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
 portalocker==3.1.1
-prometheus_client==0.21.1
-prompt_toolkit==3.0.48
+prometheus_client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1733327310477/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
+psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1735327371508/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 pyarrow==19.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycocotools==2.0.8
-pycparser==2.22
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
-Pygments==2.19.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+pyobjc-core @ file:///Users/runner/miniforge3/conda-bld/pyobjc-core_1736890619930/work
+pyobjc-framework-Cocoa @ file:///Users/runner/miniforge3/conda-bld/pyobjc-framework-cocoa_1736926981061/work
 pyparsing==3.2.1
 pypdf==5.1.0
 pypdfium2==4.30.1
-PySocks==1.7.1
-python-dateutil==2.8.2
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1733217236728/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
 python-dotenv==1.0.1
 python-iso639==2024.10.22
-python-json-logger==3.2.1
+python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
 python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.1
-pytz==2022.7.1
-PyYAML==6.0.2
-pyzmq==26.2.0
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1733215667876/work
+PyYAML @ file:///Users/runner/miniforge3/conda-bld/pyyaml_1725456176118/work
+pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1728642240260/work
 RapidFuzz==3.11.0
-referencing==0.36.1
+referencing @ file:///home/conda/feedstock_root/build_artifacts/referencing_1737120398748/work
 regex==2024.11.6
-requests==2.32.3
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1733217035951/work
 requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.22.3
+rfc3339_validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1733599910982/work
+rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
+rpds-py @ file:///Users/runner/miniforge3/conda-bld/rpds-py_1733366668214/work
 rsa==4.9
 safetensors==0.5.2
 scikit-learn==1.6.1
-scipy==1.15.1
-selenium==4.11.2
-Send2Trash==1.8.3
+scipy==1.13.1
+Send2Trash @ file:///Users/runner/miniforge3/conda-bld/send2trash_1733322099476/work
 sentence-transformers==3.3.1
 sentencepiece==0.2.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.6
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1733244044561/work
+soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1693929250441/work
 SQLAlchemy==2.0.37
-stack-data==0.6.3
-stripe==5.5.0
-sympy==1.13.1
-tenacity==8.2.2
-terminado==0.18.1
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+sympy==1.13.3
+tenacity==9.0.0
+terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1710263781917/work
 threadpoolctl==3.5.0
 timm==1.0.14
-tinycss2==1.4.0
+tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1729802851396/work
 tokenizers==0.21.0
-torch==2.5.1
-torchvision==0.20.1
-tornado==6.4.2
+tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1733256695513/work
+torch==2.2.2
+torchvision==0.17.2
+tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1732615926474/work
 tqdm==4.67.1
-traitlets==5.14.3
-transformers @ git+https://github.com/huggingface/transformers.git@5fa35344755d8d9c29610b57d175efd03776ae9e
-trio==0.22.2
-trio-websocket==0.10.3
-types-python-dateutil==2.9.0.20241206
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+transformers @ git+https://github.com/huggingface/transformers.git@234168c4dc837da10c594408f15807a1d6f3fab4
+types-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/types-python-dateutil_1733612335562/work
 typing-inspect==0.9.0
-typing_extensions==4.12.2
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+typing_utils @ file:///home/conda/feedstock_root/build_artifacts/typing_utils_1733331286120/work
+tzdata==2024.2
 unstructured==0.16.14
 unstructured-client==0.29.0
 unstructured-inference==0.8.1
 unstructured.pytesseract==0.3.13
-uri-template==1.3.0
-urllib3==1.26.14
-user-agent==0.1.10
-visitor==0.1.3
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==2.2.3
-widgetsnbextension==4.0.13
+uri-template @ file:///home/conda/feedstock_root/build_artifacts/uri-template_1733323593477/work/dist
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1734859416348/work
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+webcolors @ file:///home/conda/feedstock_root/build_artifacts/webcolors_1733359735138/work
+webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1733236011802/work
+websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1733157342724/work
 wrapt==1.17.2
-wsproto==1.2.0
 xxhash==3.5.0
 yarl==1.18.3
-zipp==3.21.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zstandard==0.23.0
